<resources>
    <string name="app_name">SATHAPANA Limited</string>
    <string name="menu_Open">Open</string>
    <string name="close_menu">Close</string>
    <string name="sathapana">SATHAPANA</string>
    <string name="about_sathapana">About Sathapana</string>
    <string name="loan_calculator">Loan Calculator</string>
    <string name="human_resources">Human Resources</string>
    <string name="financial_literacy">Financial Literacy</string>
    <string name="register">Register</string>
    <string name="word">စထာပါနာ လီမိတက်</string>
    <string name="limited">Limited</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="award">Awards</string>
    <string-array name="Method">
        <item>Business Loans</item>
        <item>Agricultural Loans</item>
    </string-array>
    <string-array name="Language">
        <item>English</item>
        <item>မြန်မာ</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hyperlink2"><a href="">အသေးစိတ်ကြည့်ရှုရန်</a></string>
    <string name="branches">Branches</string>
    <string name="services">services</string>
    <string name="news">News</string>
    <string name="Loan">loan type</string>
    <string name="API">AIzaSyBSZCn_WxIXXzIqO-nv6VovHOSsGCqU-nY</string>
    <string name="hyperlink1">"<a href="">အသေးစိတ်ကြည့်ရှုရန်</a> "</string>
    <string name="repayment_method">Repayment Method</string>
    <string name="tenor">Loan Tenor</string>
    <string name="Cal_loan">Calculate</string>
    <string name="tnor">Tenor</string>
    <string name="Rpayment">Repay</string>
    <string name="principal">Monthly principal</string>
    <string name="interest_1st">Interest paid  first month</string>
    <string name="monthly_interest">Monthly Interest</string>
    <string name="first_D">First deposit</string>
    <string name="saving">Compulsory Savings (5)%</string>
    <string name="upfont">Upfront Fees</string>
    <string name="social_welfare">Social Welfare Fees</string>
    <string name="last_D">Last deposit</string>
    <string name="total">Total</string>
    <string name="Ag_loan">Agricultural Loan</string>
    <string name="B_loan">Business Loan</string>
    <string name="R_Pay">Reimbursement at the office.</string>
    <string name="R_Pay0">Digital reimbursement.</string>
    <string name="brand_Address">" branch addresses details"</string>
    <string name="ongo">Reimbursement by Ongo</string>
    <string name="On_Re">Ongo Mobile will pay the loan repayment to the company as members of the company You can do it easily with Financial Service. Monthly loans as members You must take the repayment chart with you and submit it to the nearest Ongo service representative and ask for a receipt.\\nGroup Loan Clients What happened was one transaction for each member (for each Customer ID One time transfer) must be made. The whole group cannot be transferred in one transaction.\\nThe transfer fee is 250 kyats (two hundred and fifty kyats) per transaction.</string>
    <string name="wave">Reimbursement by  Wave Moneyး</string>
    <string name="wave_re">Members of Sathapana can easily make loan repayments to the company with Wave Money. As members, regardless of whether they live in any area where Sathapana Limited operates, or Regardless of which branch office you received the service from, you can easily pay from the nearest Wave Money representatives or from the Wave Application.\\n Group Loan Clients What happened was one transaction for each member (for each Customer ID One time transfer) must be made. Cannot be transferred in one transaction for the entire Group. The service fee charged is only 200 kyats (exactly two hundred kyats) per money transfer up to a maximum amount of 1,000,000 kyats (ten hundred thousand kyats).</string>
    <string name="F_IEB">Income,Expenditure,Budget</string>
    <string name="F_LSS">Loan,Saving,Services</string>
    <string name="F_DM">Debt Management</string>
    <string name="F_FM">Financial Management</string>
    <string name="F_DW">Degital Wallet</string>
    <string name="L_text1">What is a loan?</string>
    <string name="L_text2">A loan is someone who needs money for an emergency when they don\'t have money , Or I\'m talking about borrowing money from a lending institution. If you borrow money, you will have to pay it back Before a certain amount of time is reached, the interest due on the amount borrowed is paid correctly.</string>
    <string name="L_text3">Savings</string>
    <string name="L_text4">Saving means saving your income for the future. Only if you collect it, you will be calm for the future, as well as if you encounter any situation It will be useful.</string>
    <string name="I_text1">What is income?</string>
    <string name="I_text2">Income is all the income that comes in from different ways. For example, support money from children, own house Fees for renting land , daily wage wages Earnings from various sources, such as income from one\'s own business, are called income. But the loan is not considered as income.</string>
    <string name="I_text3">What are utility bills?</string>
    <string name="I_text4">Income is all the income that comes in different ways is called income For example, support money from children. own house Fees for renting land , daily wage wages Earn money from a variety of sources, including income from your own business called. But the loan is not considered as income.</string>
    <string name="loanAmt">Loan Amount</string>
    <string name="mmk">MMK</string>
    <string name="month">Month</string>
    <string name="I_text5">What is a budget?</string>
    <string name="I_text6">Income is all the income that comes in different ways is called income For example, support money from children. own house Fees for renting land , daily wage wages Earn money from a variety of sources, including income from your own business called. But the loan is not considered as income.</string>
    <string name="D_text1">What is debt?</string>
    <string name="D_text2">Debt means that when you borrow money from others, you become indebted to yourself. Debt is not always bad. Debt also has good debt and bad debt. So if you go into debt, you need to have good credit.</string>
    <string name="D_text3">Income and debt</string>
    <string name="D_text4">Income is all the money that comes in in different ways. For example: children Funding from private house land rent daily wage wages Own business There are various ways to talk about income. But The loan is not considered as income. \\n Since I have borrowed money, I need to pay it back on time Defined as debt.</string>
    <string name="FM_text1">Financial management</string>
    <string name="FM_text2">Everyone wants to buy, There are jobs they want to do. Whether you want to buy something, I want to do some business The main thing is to implement the work you want to do It is money. If you don\'t have any goals, save money Not at. That\'s why you need to save money with a goal . For example, to buy a house. Like saving money to buy a car.</string>
    <string name="DW_text1">What is Mobile Wallet?</string>
    <string name="bago1">Bago Branch</string>
    <string name="daiku">Daik-U Branch</string>
    <string name="gyobingauk">Gyobingauk Branch</string>
    <string name="indagaw">Indagaw Branch</string>
    <string name="waw">Waw Branch</string>
    <string name="nyaunglebin">Nyaunglebin Branch</string>
    <string name="bago1txt">No. (738), Yangon-Mandalay Road,  No. (7)Ward, Oaktha Myo Thit, Bago Township, Bago Region.
0522201318 09977917189</string>
    <string name="daikutxt">Holding No. (12), No. (1), Min Road, Zay Paing Ward, Daik U Township , Bago Region.
05240583, 09969703003</string>
    <string name="gyobingauktxt">No. (125/126), Anouk Lan Ma Taw Street, Anouk-Mrauk Ward, Gyobingauk Township, , Bago Region.
09977272992, 09977272993</string>
    <string name="indagawtxt">
No. (3/38), Min Road, West Area Ward, Indagaw Township,  Bago Region.
09977124156</string>
    <string name="wawtxt">No. (336/A), Min Road, Aye Chan Thar Yar Ward, Waw Township, , Bago Region.
09977272401</string>
    <string name="nyaunglebintxt">No. (194), Mandalay Road, Chan Mya Tha Sei Ward, Nyaung Le Bin Township, , Bago Region.
09977124369</string>
    <string name="pathein">Pathein Branch</string>
    <string name="myaungmya">Myaungmya Branch</string>
    <string name="hinthada">Hinthada Branch</string>
    <string name="pyapon">Pyapon Branch</string>
    <string name="maubin">Maubin Branch</string>
    <string name="yegyi">Yegyi Branch</string>
    <string name="pandanaw">Pandanaw Branch</string>
    <string name="myanaung">Myanaung Branch</string>
    <string name="patheintxt">No. (24), Tagong Pagoda Road (6) Ward, Pathein Township, Ayeyarwady Region.
09977917211</string>
    <string name="myaungmyatxt">
Room number (7/8), Highway Main Road, Mya Kanthar Ward, Myaung Mya Township , Ayeyarwady Region.
09969703014, 09969703015</string>
    <string name="hinthadatxt">No. (122), Mahabandula Road, Takalay Ward, Hinthata Township, , Ayeyarwady Region.
09951046305, 09951046306</string>
    <string name="pyapontxt">
No. (195) Chaung Twin Road, (14) Ward, Pyapon Township, , Ayeyarwady Region.
09969893520, 09969893521</string>
    <string name="maubintxt">No. (12), Yae Le Main Road, Ward No. (5) Maubin Township, , Ayeyarwady Region.
09969732286, 09969732287</string>
    <string name="yegyitxt">No. (293), Corner of School Street and Ba Htoo (9) Street, Ba Htoo Ward, Yegyi Township, , Ayeyarwady Region.
09977540354, 09977540355</string>
    <string name="pandanawtxt">No. (35/36+37/38), Yangon-Pathein Road, Myo Kwat Thit Ward, Pandanaw Township, Ayeyarwady Region.
09977583481</string>
    <string name="myanaungtxt">No. (45), Post office tent road, No. (2) Ward, Myan Aung Township, , Ayeyarwady Region.
09977540317, 09977540318</string>
    <string name="monywa">Monywa Branch</string>
    <string name="shwebo">Shwebo Branch</string>
    <string name="sagaing">Sagaing Branch</string>
    <string name="chaungu">Chaung-U Branch</string>
    <string name="yeu">Ye-U Branch</string>
    <string name="monywatxt">No. (8/15), Zatkuka Toe Sate, Aye Tharyar Ward, Monywa Township, Sagaing Region.
09969752653, 09969752654</string>
    <string name="shwebotxt">No. (640), Shwebo-Myitkyina Road, Thuzar Kwat Thit,  No. (10) Ward, Shwebo Township, Sagaing Region.
09969732273 09969732274</string>
    <string name="sagaingtxt">House No. (Plot No.-7); corner of Tatyo Road and Market Street; Poe Tan Ward Sagaing Township Sagaing Region.
09977583520, 09977583521</string>
    <string name="chaungutxt">Bo Gyoke Street, National Ward Chaung U Township, Sagaing Region.
09969893575</string>
    <string name="yeutxt">No. (520), Ye U-Kalaywa Road, Bo Aung Zeya Ward, Ye U Township, Sagaing Region.
09949671169, 09940671170</string>
    <string name="taunggyi">Taunggyi Branch</string>
    <string name="aungban">Aungpan Branch</string>
    <string name="phekon">Phekon Branch</string>
    <string name="nanhsam">Nanhsam Branch</string>
    <string name="taunggyitxt">No. (142), Rose Road, Pyi Taw Thar Ward, Taunggyi Township, Shan State.
09977272915</string>
    <string name="aungbantxt">No. (a), Pintaya Road, Hleyoe Ward, Aung Pan Township, Shan State.
09977272900, 09977272901</string>
    <string name="phekontxt">No. (Y, 266), Inlay Street, Nyaungkone Ward, Phekon Township, Shan State.
09977583467, 09977583469</string>
    <string name="nanhsamtxt">No. (747), Bayinnaung Road, No. (1) Ward, Nanhsam Township, Loilen District, Shan State.
09940498752, 09940498758</string>
</resources>