<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyeyarwadiRegion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/patain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/pathein"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pataintxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/patheintxt"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/myaungmya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/myaungmya"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/myaungmyatxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/myaungmyatxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hinthada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/hinthada"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hinthadatxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/hinthadatxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pharpoon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/pyapon"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pharpoontxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/pyapontxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/maaubin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/maubin"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/maaubintxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/maubintxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/yaygi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/yegyi"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/yaygitxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/yegyitxt"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/pandanaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/pandanaw"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pandanawtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/pandanawtxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/myanaung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/myanaung"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/myanaungtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/myanaungtxt"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>