<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BagoRegion">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/bago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/bago1"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/bagotxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/bago1txt"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/daiku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/daiku"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/daikutxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/daikutxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gyobingauk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/gyobingauk"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gyobingauktxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/gyobingauktxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/indagaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/indagaw"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/indagawtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/indagawtxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/waw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/waw"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wawtxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/wawtxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nyaunglebin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/nyaunglebin"
                android:textColor="@color/headercolor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nyaunglebintxt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nyaunglebintxt"
                android:textSize="18sp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>